# sapo

./: .clang-format  .gitignore  Always.h  Atom.cpp  Atom.h  BaseConverter.cpp  BaseConverter.h  Box.cpp  Box.h  Bundle.cpp  Bundle.h  CMakeLists.txt  CoeffMap.cpp  CoeffMap.h  Common.h  Conjunction.cpp  Conjunction.h  DiscreteDynamicalSystem.cpp  DiscreteDynamicalSystem.h  Disjunction.cpp  Disjunction.h  DynamicalSystem.cpp  DynamicalSystem.h  Ebola.cpp  Ebola.h  Eventually.h  LinearSystem.cpp  LinearSystem.h  LinearSystemSet.cpp  LinearSystemSet.h  Makefile  Model.cpp  Model.h  MultiParallelotope.cpp  MultiParallelotope.h  MultiReacher.cpp  MultiReacher.h  Parallelotope.cpp  Parallelotope.h  ParameterSynthesizer.cpp  (+30 more)
Debug/: BaseConverter.d  Box.d  Bundle.d  CoeffMap.d  DiscreteDynamicalSystem.d  DynamicalSystem.d  LinearSystem.d  LinearSystemSet.d  Model.d  MultiParallelotope.d  MultiReacher.d  Parallelotope.d  ParameterSynthesizer.d  Polyhedron.d  VarsGenerator.d  main_ebola.d  main_influenza_multi.d  main_old_sir.d  main_osc_multi.d  main_quad_multi.d  main_sars_multi.d  main_si.d  main_sir.d  main_sir_multi.d  main_thesis.d  makefile  objects.mk  sources.mk  subdir.mk
Models/: Converge.cpp  Converge.h  Ebola.cpp  Ebola.h  SI.cpp  SI.h  SIR.cpp  SIR.h
STL/: Always.cpp  Atom.cpp  Atom.h  Disjunction.cpp  STL.cpp  STL.h
cmake/: FindGLPK.cmake  FindGMP.cmake  runtests.cmake
doc/: HSCC2107RE.md
docs/: index.html
examples/: Ebola-split.out  Ebola-split.sil  Ebola.out  Ebola.sil  Influenza-no-splits.out  Influenza-no-splits.sil  Influenza-splits-scalability.sil  Influenza-splits.out  Influenza-splits.sil  Influenza.out  Influenza.sil  Julia_3.sil  LotkaVolterra.out  LotkaVolterra.sil  Phosphorelay.out  Phosphorelay.sil  Quadcopter.out  Quadcopter.sil  Rossler.out  Rossler.sil  SIR.out  SIR.sil  SIR_vax_assert.sil  SIR_vax_assume.sil  SIR_vax_poly.sil  SIRp.out  SIRp.sil  VanDerPol.out  VanDerPol.sil  assert.sil  boundaries_errors.err  boundaries_errors.sil  incomplete-directions.out  incomplete-directions.sil  template_error.err  template_error.sil
include/: Always.h  Atom.h  AutoGenerated.h  BaseConverter.h  Bundle.h  Common.h  Conjunction.h  ControlPointStorage.h  Disjunction.h  Flowpipe.h  JSONStreamer.h  LinearAlgebra.h  LinearAlgebraIO.h  LinearSystem.h  LinearSystemSet.h  Model.h  OutputFormatter.h  Parallelotope.h  Polytope.h  PolytopeSet.h  PolytopesUnion.h  ProgressAccounter.h  STL.h  Sapo.h  SapoThreads.h  Semaphore.h  SymbolicAlgebra.h  ThreadPool.h  Until.h  VarsGenerator.h  Version.h
lib/: .gitignore
libSapo/: CMakeLists.txt  Doxyfile  SapoConfig.cmake.in
libSapo/include/: Approximation.h  BaseConverter.h  Bernstein.h  Bundle.h  BundleTemplate.h  ContinuousSystem.h  DifferentialSystem.h  DiscreteSystem.h  DynamicalSystem.h  Dynamics.h  ErrorHandling.h  Evolver.h  FloatingPoints.h  Flowpipe.h  Integrator.h  JSONStreamer.h  LinearAlgebra.h  LinearAlgebraIO.h  LinearSystem.h  Model.h  OutputFormatter.h  Parallelotope.h  Polytope.h  PolytopesUnion.h  ProgressAccounter.h  Sapo.h  SapoThreads.h  Semaphore.h  SetsUnion.h  Simplex.h  StickyUnion.h  SymbolicAlgebra.h  ThreadPool.h  TriBool.h  VarsGenerator.h  Version.h
libSapo/include/STL/: Always.h  Atom.h  Conjunction.h  Disjunction.h  Eventually.h  Negation.h  STL.h  TimeInterval.h  Until.h
libSapo/src/: BaseConverter.cpp  Bundle.cpp  BundleTemplate.cpp  DynamicalSystem.cpp  Evolver.cpp  Flowpipe.cpp  LinearSystem.cpp  Model.cpp  Parallelotope.cpp  Polytope.cpp  PolytopesUnion.cpp  ProgressAccounter.cpp  Sapo.cpp  SapoThreads.cpp  ThreadPool.cpp  TriBool.cpp  VarsGenerator.cpp  Version.cpp.in
libSapo/src/STL/: Always.cpp  Atom.cpp  Conjunction.cpp  Disjunction.cpp  Eventually.cpp  Negation.cpp  STL.cpp  TimeInterval.cpp  Until.cpp
libSapo/tests/: Bernstein.cpp  CMakeLists.txt  approximations.cpp  bundle.cpp  bundles.cpp  discrete_systems.cpp  dynamical_systems.cpp  evolver.cpp  floating_points.cpp  linear_algebra.cpp  linear_systems.cpp  ode.cpp  parallelotope.cpp  parallelotopes.cpp  polytope.cpp  polytopes.cpp  sets_unions.cpp  simplex.cpp  sticky_unions.cpp  symbolic_algebra.cpp  tribool.cpp
parser/: parser.yy  scanner.l
sapo/: CMakeLists.txt  parser.yy  scanner.l
sapo/cmake/: runtests.cmake
sapo/doc/: SIL.md
sapo/examples/: CML_extended.sil  Ebola-split.sil  Ebola.sil  FitzHugh-Nagumo.sil  FitzHugh-Nagumo2.sil  FitzHugh-Nagumo3.sil  FitzHugh-Nagumo4.sil  FitzHugh–Nagumo.sil  FitzHugh–Nagumo2.sil  FitzHugh–Nagumo4.sil  Influenza-no-splits.sil  Influenza-splits-scalability.sil  Influenza-splits.sil  Influenza.sil  Julia_3.sil  Julia_invariant.sil  LotkaVolterra.sil  Mandelbrot_3.sil  Mandelbrot_invariant.sil  ODE.sil  Phosphorelay.sil  Quadcopter.sil  Rossler.sil  SIR.sil  SIR_vax_assume.sil  SIRp.sil  VanDerPol.sil  colon.sil  function_test.sil  incomplete-directions.sil  individual_adaptive.sil  invariant_validation.sil  invariant_validation_fail.sil  opposite_template.sil  rational_polynomial.sil  rotation.sil  spiral.sil
sapo/include/: AbsSynIO.h  AutoGenerated.h  Definition.h  Direction.h  Expr.h  Function.h  InputData.h  JSONStreamer.h  OutputFormater.h  Parameter.h  types.h
sapo/src/: AutoGenerated.cpp  Direction.cpp  InputData.cpp  JSONStreamer.cpp  driver.cpp  main.cpp
sapo/tests/: CML_extended.out  Ebola.out  Influenza-no-splits.out  Influenza-splits.out  Influenza.out  Julia_invariant.out  LotkaVolterra.out  Mandelbrot_invariant.out  ODE.out  Phosphorelay.out  Quadcopter.out  Rossler.out  SIR.out  SIR_vax_assume.out  SIRp.out  VanDerPol.out  colon.out  function_test.out  incomplete-directions.out  invariant_validation.out  invariant_validation_fail.out  opposite_template.out  rational_polynomial.out
scripts/: install-hooks.bash  pre-commit.bash  run-tests.bash  run-tests.bash.orig
src/: Always.cpp  Atom.cpp  AutoGenerated.cpp  BaseConverter.cpp  Bundle.cpp  Conjunction.cpp  ControlPointStorage.cpp  Eventually.cpp  Flowpipe.cpp  LinearSystem.cpp  LinearSystemSet.cpp  Model.cpp  Parallelotope.cpp  Polytope.cpp  PolytopeSet.cpp  PolytopesUnion.cpp  ProgressAccounter.cpp  (+13 more)
(+100 files in other folders)
